issue: aligning li items

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -633,7 +633,7 @@ footer {
   
 }
 
-.blogIntroDiv > ul > ul{
+.blogIntroDiv > ul ul{
   padding-left: 15px;
 }
 
